add(errlog):added errorlog delete
